# CausalCommunicationRefiner

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py  agentprune_counterfactual_builder.py  build_counterfactual_cache.py  evaluate_gdesigner_explainer_pareto.py  evaluate_mmlu_gdesigner_explainer.py  gdesigner_fixed_graph_counterfactual_builder.py  gdesigner_posthoc_runner.py  gdesigner_trained_counterfactual_builder.py  omni_math_adapter.py  score_counterfactual_cache.py  train_local_entropy_explainer.py
ccr/: __init__.py  critic.py  local_entropy_explainer.py  pruning.py  schema.py  scoring.py  similarity.py
configs/: all_seven_topologies.json  all_six_topologies.json  aqua_topologies.json  gsm8k_topologies.json  humaneval_topologies.json  mmlu_topologies.json  multiarith_topologies.json  omni_topologies.json  svamp_topologies.json
docs/: github_sync.md  method_pipeline.md  method_review.md
reports/local_entropy_dataset_20260610/: dataset_summary.csv  dataset_summary.json  examples.md  report_zh.md
scripts/: launch_humaneval_shards.sh  launch_pareto_six_gpus.sh  run_all_seven_topologies.sh  run_all_six_topologies.sh  run_humaneval_topologies.sh  run_omni_topologies.sh
tests/: test_core.py  test_omni_adapter.py
